test/integration/httproute/manifests/basic/no_matching_parent/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  - name: gateway
    sectionName: http3
  hostnames:
  - "example.haproxy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /path1
    backendRefs:
    - name: http-echo
      port: 80
